--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js" defer></script>
     <title>Timed JS Quiz</title>
   </head>
   <body>
+    <div class="timeContainer">
       <div class="timeLeft">Time Left 90</div>
-    <div id="start-prompt" class="Intro">
-        <div id="timesUp"></div>
-        <h2>Start Quiz</h2>
-        <button id="start-btn">Start Quiz</button>
+      <div id="timesUp"></div>
     </div>
-    <div id="quiz" class="hidden">
-        <h1 id="questions">Your Quiz Has Started!</h1>
-      <div id="answers"></div>
-            <button class="questionOpt">Option 1</button>
-            <button class="questionOpt"> Option 2</button>
-            <button class="questionOpt">Option 3</button>
-            <button class="questionOpt">Option 4</button>
+    <div class="container">
+      <div id="quizQuestions" class="hidden">
+        <div id="question">Question</div>
+        <div id="button-choices" class="btn-options">
+          <button class="btn">Option 1</button>
+          <button class="btn">Option 2</button>
+          <button class="btn">Option 3</button>
+          <button class="btn">Option 4</button>
+        </div>
+      </div>
+      <div class="quizNavigationBtn">
+        <button id="start-btn" class="start-btn btn">Start</button>
+        <button id="next-btn" class="next-btn btn hidden">Next</button>
+      </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
