--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
   </head>
   <body>
     <div class="timeContainer">
-      <div class="timeLeft">Time Left 90</div>
+      <div class="timeLeft">Time Left 150</div>
       <div id="timesUp"></div>
     </div>
     <div class="container">
       <div id="quizQuestions" class="hidden">
-        <div id="question">Question</div>
-        <div id="button-choices" class="btn-options">
-          <button class="btn">Option 1</button>
-          <button class="btn">Option 2</button>
-          <button class="btn">Option 3</button>
-          <button class="btn">Option 4</button>
+        <div id="quiz-question"></div>
+        <div id="quiz-answer-choices" class="btn-options">
+          <button id="btn1"></button>
+          <button id="btn2"></button>
+          <button id="btn3"></button>
+          <button id="btn4"></button>
+          
         </div>
       </div>
       <div class="quizNavigationBtn">
@@ -27,6 +28,11 @@
         <button id="next-btn" class="next-btn btn hidden">Next</button>
       </div>
     </div>
+    <script
+  src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+  integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+  crossorigin="anonymous"></script>
     <script src="./script.js"></script>
+    
   </body>
 </html>
