--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Timed JS Quiz</title>
   </head>
@@ -15,7 +18,6 @@
     </div>
     <div class="container">
       <div id="quizQuestions" class="hidden">
-
         <div id="quiz-question"></div>
         <div class="question-id hidden"></div>
         <div id="quiz-answer-choices" class="btn-options">
@@ -27,12 +29,16 @@
       </div>
       <form id="highScoreForm" class="hidden">
         <label for="userScore">Add your initials</label>
-        <input type="text" placeholder="Your Score..." name="userScore" id="userScore">
+        <input
+          type="text"
+          placeholder="Your Initials Here..."
+          name="userScore"
+          id="userScore"
+        />
         <span id="scoreResult" class="btn btn-primary">Get Result</span>
       </form>
       <ul id="localScores"></ul>
 
-      
       <div class="quizNavigationBtn">
         <button id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hidden">Next</button>
